FIX: b2t CSS for scrollpercent alignment.

--- a/source/css/_common/components/back-to-top.styl
+++ b/source/css/_common/components/back-to-top.styl
@@ -5,7 +5,6 @@
   right: $b2t-position-right;
   z-index: $zindex-5;
   padding: 0 6px;
-  width: 25px;
   background: $b2t-bg-color;
   font-size: $b2t-font-size;
   opacity: $b2t-opacity;
